--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@inubekit/your-component-name",
+  "name": "@inubekit/test",
   "homepage": "https://inubeds.vercel.app/",
   "author": "inube",
   "main": "dist/index.es.js",
@@ -70,5 +70,14 @@
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
+  },
+  "auto": {
+    "plugins": [
+      "npm",
+      {
+        "type": "released",
+        "dir": "dist"
+      }
+    ]
   }
 }
