fix(auto): change the auto configuration in  orderder to make the releases automatically

--- a/.autorc
+++ b/.autorc
@@ -1,10 +1,9 @@
 {
-  "repo": "cmarin001/inubekit-test",
-  "owner": "cmarin001",
   "plugins": [
-    "npm",
-    {
-      "assets": ["dist/**/*.*", "package.json"]
-    }
-  ]
+    "git-tag"
+  ],
+  "owner": "cmarin001",
+  "repo": "inubekit-test",
+  "name": "cmarin001",
+  "email": "cmarin6051@gmail.com"
 }
