--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "auto": "auto",
     "changelog": "npm run auto changelog",
     "version": "rm -rf dist && npm run build",
-    "release": "auto shipit"
+    "release": "git push --follow-tags && npm run auto release",
+    "autorelease": "auto shipit"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -57,7 +58,7 @@
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "auto": "^11.0.4",
+    "auto": "^11.1.2",
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react-hooks": "^4.6.0",
@@ -72,5 +73,11 @@
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
+  },
+  "repository": "cmarin001/inubekit-test",
+  "auto": {
+    "plugins": [
+      "npm"
+    ]
   }
 }
