--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
+    "@auto-it/npm": "^11.1.2",
     "@commitlint/cli": "^18.4.4",
     "@commitlint/config-conventional": "^18.4.4",
     "@storybook/addon-essentials": "^8.0.2",
