--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -10,26 +10,29 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Setup Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
-          node-version: "14"
+          node-version: "16"
           registry-url: "https://registry.npmjs.org/"
           scope: "@inubekit"
           always-auth: true
 
       - name: Configure Git
         run: |
-          git config --global user.email cmarin@sistemasenlinea.com.co
+          git config --global user.email cmarin6051@gmail.com
           git config --global user.name cmarin001
+
+      - name: Configure npm for Publishing
+        run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > .npmrc
 
       - name: Install Dependencies
         run: npm install
 
       - name: Run auto shipit
-        run: npx auto shipit
+        run: npx auto shipit --verbose
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
