--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -28,6 +28,12 @@ jobs:
       - name: Configure npm for Publishing
         run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > .npmrc
 
+      - name: Commit .npmrc file
+        run: |
+          git add .npmrc
+          git commit -m "Configure npm for publishing" || echo "No changes to commit"
+          git push
+
       - name: Install Dependencies
         run: npm install
 
