--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -31,8 +31,9 @@ jobs:
       - name: Commit .npmrc file
         run: |
           git add .npmrc
-          git commit -m "Configure npm for publishing" || echo "No changes to commit"
-          git push
+          git commit -m "Configure npm for publishing"
+          git push --quiet https://${{ secrets.GITHUB_TOKEN }}@github.com/cmarin001/inubekit-test.git main
+      
 
       - name: Install Dependencies
         run: npm install
