--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -24,8 +24,14 @@ jobs:
 
       - name: Configure Git
         run: |
-          git config --global user.email cmarin6051@gmail.com
+          git config --global user.email cmarin6051@gm
+          ail.com
           git config --global user.name cmarin001
+
+      - name: Configure npm
+        run: |
+          echo "@inubekit:registry=https://registry.npmjs.org/" >> .npmrc
+          echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" >> .npmrc
 
       - name: Install Dependencies
         run: npm install
