--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -24,8 +24,7 @@ jobs:
 
       - name: Configure Git
         run: |
-          git config --global user.email cmarin6051@gm
-          ail.com
+          git config --global user.email cmarin6051@gmail.com
           git config --global user.name cmarin001
 
       - name: Configure npm
