--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -35,12 +35,8 @@ jobs:
       - name: Install Dependencies
         run: npm install
 
-      - name: Make script executable
-        run: chmod +x ./release-script.sh
-
-      - name: Execute Release Script
+      - name: Run auto shipit
+        run: npx auto shipit --verbose
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }} # Ensure this is set in your repo's secrets if you need it for npm publish
-        run: |
-          ./release-script.sh
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
