--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -24,6 +24,7 @@ jobs:
 
       - name: Configure Git
         run: |
+          git push --set-upstream origin ${CIRCLE_BRANCH}
           git config --global user.email cmarin6051@gmail.com
           git config --global user.name cmarin001
 
@@ -38,5 +39,5 @@ jobs:
       - name: Run auto shipit
         run: npx auto shipit --verbose
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
